deploy/api-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: twgc-api
spec:
  selector:
    matchLabels:
      tier: api-server
  replicas: 1
  template:
    metadata:
      name: api-server
      labels:
        tier: api-server
    spec:
      serviceAccountName: twgc-api-server
      containers:
      - name: twgc-api
        image: ogre0403/twgc:api-299f3bc-k8s
        ports:
        - containerPort: 38080
        volumeMounts:
        - name: twgc-api-conf
          mountPath: /etc/api-server/
      volumes:
      - name: twgc-api-conf
        configMap:
          name: twgc-api-cm
          items:
          - key: api-conf
            path: api-config.json
---
apiVersion: v1
kind: Service
metadata:
  name: twgc-api-svc
spec:
  ports:
    - port: 38080
  selector:
    tier: api-server
