deploy/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: twgc-ui
spec:
  selector:
    matchLabels:
      tier: twgc-ui
  replicas: 1
  template:
    metadata:
      name: twgc-ui
      labels:
        tier: twgc-ui
    spec:
      containers:
      # use nginx to serve built ui
      - name: twgc-nginx
        image: nginx:1.15-alpine
        ports:
        - containerPort: 3010
        volumeMounts:
        - name: twgc-nginx-conf
          mountPath: /etc/nginx/conf.d
        - name: dist
          mountPath: /usr/share/nginx/html
      volumes:
      - name: twgc-ui-conf
        configMap:
          name: twgc-ui-cm
          items:
          - key: endpoint-conf
            path: api.js
      - name: twgc-nginx-conf
        configMap:
          name: twgc-nginx-cm
          items:
          - key: nginx-conf
            path:  default.cong
      - name: dist
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: twgc-ui
spec:
  type: NodePort
  ports:
    - port: 3010
      nodePort: 30004
  selector:
    tier: twgc-ui
