deploy/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: twgc-database
spec:
  selector:
    matchLabels:
      tier: mysql
  replicas: 1
  template:
    metadata:
      name: mysql-pod
      labels:
        tier: mysql
    spec:
      containers:
      - name: twgc-database
        image: mysql:8
        volumeMounts:
        - name: mysql-storage
          mountPath: /var/lib/mysql
        - name: init-db-script
          mountPath: /docker-entrypoint-initdb.d
      volumes:
      - name: mysql-storage
        persistentVolumeClaim:
          claimName: mysql-pvc
      - name: init-db-script
        persistentVolumeClaim:
          claimName: init-db
---
apiVersion: v1
kind: Service
metadata:
  name: twgc-database-svc
spec:
  ports:
    - port: 3306
  selector:
    tier: mysql
