deploy/ingress-ssl.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: aitrain-ingress
spec:
  rules:
  - host: aitrain.nchc.org.tw
    http:
      paths:
      - backend:
          serviceName: twgc-ui
          servicePort: 3010
  tls:
  - secretName: nchc-tls-secret
    hosts:
    - aitrain.nchc.org.tw
